--- a/app/scss/components/Home/_products.scss
+++ b/app/scss/components/Home/_products.scss
@@ -35,13 +35,27 @@
   }
 
   @media screen and (max-width: 1110px) {
-    padding-bottom: 100px;
+    padding-bottom: 70px;
+
+    &__categories {
+      margin: 35px 0 25px;
+    }
+
+    &__items {
+      margin-bottom: 15px;
+    }
+  }
+
+  @media screen and (max-width: 418px) {
+    &__categories {
+      margin: 20px 0 10px;
+    }
   }
 }
 
 .product-card {
   max-width: 275px;
-  margin: 0 15px 30px 0px;
+  margin: 0 7px 30px;
 
   img {
     margin-bottom: 10px;
