--- a/app/scss/components/Cart/_cart.scss
+++ b/app/scss/components/Cart/_cart.scss
@@ -9,7 +9,7 @@
     &--empty {
       padding: 60px 0;
       background-color: #fff;
-      flex-direction: column;
+      flex-direction: column !important;
       align-items: center;
       text-align: center;
 
